--- a/index.html
+++ b/index.html
@@ -4,24 +4,35 @@
     <meta charset="UTF-8">
     <title>overlay</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+
 </head>
 <body>
+<h2>To get information about an element please click on the element </h2>
+<p>Black container don't have the 'data-layout' attribute.</p>
 
-<div class="one test"></div>
-<div class="one"></div>
-<div class="one"></div>
-<div class="one"></div>
-<div class="one"></div>
-<div class="one"></div>
-<div class="one"></div>
-<div class="one"></div>
-<div class="one"></div>
+    <div class="one test" data-layout="true">
+        <div class="four" data-layout="true"></div>
 
-<div id="overlay_block"></div>
-<div id="overlay_info">
-    <p>overlay info lorem ipsum dolore lorem ipsum dolore lorem ipsum dolore</p>
-</div>
+    </div>
+    <div class="one hint"></div>
 
-<script src="style.js"></script>
+    <div class="one" data-layout="true">
+        <div class="two" data-layout="true"></div>
+    </div>
+    <div class="one" data-layout="true">
+        <div class="five" data-layout="true"></div>
+    </div>
+    <div class="one" data-layout="true">
+        <div class="three">
+            <div class="six"></div>
+        </div>
+    </div>
+    <div class="one" data-layout="true">
+        <div class="three"></div>
+    </div>
+    <div id="overlay_block"></div>
+    <div id="overlay_info">Hello</div>
+<script src="script.js"></script>
+
 </body>
 </html>
