Fixed scroll bug, added prefix "overlay_debug_" to classes and IDs, created overlay block in a js file.

--- a/index.html
+++ b/index.html
@@ -10,28 +10,73 @@
 <h2>To get information about an element please click on the element </h2>
 <p>Black container don't have the 'data-layout' attribute.</p>
 
-    <div class="one test" data-layout="true">
-        <div class="four" data-layout="true"></div>
+<div class="one test" data-layout="true">
+    <div class="four" data-layout="true"></div>
 
-    </div>
-    <div class="one hint"></div>
+</div>
+<div class="one hint"></div>
 
-    <div class="one" data-layout="true">
-        <div class="two" data-layout="true"></div>
+<div class="one" data-layout="true">
+    <div class="two" data-layout="true"></div>
+</div>
+<div class="one" data-layout="true">
+    <div class="five" data-layout="true"></div>
+</div>
+<div class="one" data-layout="true">
+    <div class="three">
+        <div class="six"></div>
     </div>
-    <div class="one" data-layout="true">
-        <div class="five" data-layout="true"></div>
+</div>
+<div class="one" data-layout="true">
+    <div class="three"></div>
+</div>
+
+
+<div class="one test" data-layout="true">
+    <div class="four" data-layout="true"></div>
+
+</div>
+<div class="one hint"></div>
+
+<div class="one" data-layout="true" id="test">
+    <div class="two" data-layout="true"></div>
+</div>
+<div class="one" data-layout="true">
+    <div class="five" data-layout="true"></div>
+</div>
+<div class="one" data-layout="true">
+    <div class="three">
+        <div class="six"></div>
     </div>
-    <div class="one" data-layout="true">
-        <div class="three">
-            <div class="six"></div>
-        </div>
+</div>
+<div class="one" data-layout="true">
+    <div class="three"></div>
+</div>
+<div class="one test" data-layout="true">
+    <div class="four" data-layout="true"></div>
+
+</div>
+<div class="one hint"></div>
+
+<div class="one" data-layout="true">
+    <div class="two" data-layout="true"></div>
+</div>
+<div class="one" data-layout="true">
+    <div class="five" data-layout="true"></div>
+</div>
+<div class="one" data-layout="true">
+    <div class="three">
+        <div class="six"></div>
     </div>
-    <div class="one" data-layout="true">
-        <div class="three"></div>
-    </div>
-    <div id="overlay_block"></div>
-    <div id="overlay_info">Hello</div>
+</div>
+<div class="one" data-layout="true">
+    <div class="three"></div>
+</div>
+
+
+<!--<div id="overlay_debug_block"></div>-->
+<!--<div id="overlay_debug_info">Hello</div>-->
+
 <script src="script.js"></script>
 
 </body>
